PLAT-120930: Fixed FlexiblePopupPanels and PopupTabLayout style when large text (#756)
* PLAT-120930: Fixed Tab font size when large text

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* PLAT-120930: Fixed Tab icon is not centered when large text

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* Change mini header font size

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* Fix back button of FlexiblePopup size when large text

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* Fixed FlexiblePopup back button better

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* fix back buttons

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* Fix FlexiblePopup navButton size

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* role back Header

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* fixed tablayout tab icon

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

* added a changelog

Enact-DCO-1.0-Signed-off-by: Mikyung Kim (mikyung27.kim@lge.com)

--- a/FlexiblePopupPanels/FlexiblePopupPanels.module.less
+++ b/FlexiblePopupPanels/FlexiblePopupPanels.module.less
@@ -45,6 +45,13 @@
 			position: absolute;
 			transform: translate(0, -50%);
 			margin: @sand-flexiblepopuppanels-navbutton-margin;
+
+			.sand-custom-text({
+				.sand-small-button-text();
+				height: @sand-button-small-height;
+				line-height: (@sand-button-small-height - (2 * @sand-button-border-width));
+				min-width: @sand-button-small-height;
+			});
 		}
 	}
 
