--- a/TabLayout/TabGroup.module.less
+++ b/TabLayout/TabGroup.module.less
@@ -34,6 +34,10 @@
 
 		&.button {
 			height: @sand-tablayout-tab-vertical-button-height;
+			.sand-custom-text({
+				font-size: @sand-tablayout-tab-font-size;
+				min-width: @sand-button-height;
+			})
 		}
 
 		.client {
