--- a/styles/variables.less
+++ b/styles/variables.less
@@ -58,7 +58,7 @@
 
 		mini-margin: 0 0 36px 0;
 		mini-padding: 60px 60px 45px 60px;
-		mini-title-font-size: 108px;
+		mini-title-font-size: 90px;
 		mini-title-line-height: 80px;
 
 		standard-padding: 108px 150px 73px 150px;
